--- a/Source/Applications/CHC Local Work Machine/Forms/ServiceList.resx
+++ b/Source/Applications/CHC Local Work Machine/Forms/ServiceList.resx
@@ -1899,6 +1899,9 @@
   <metadata name="mainTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>421, 14</value>
   </metadata>
+  <metadata name="mainMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>530, 14</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIABKFQAAZgAAAICAAAABACAAKAgBALAVAABAQAAAAQAgAChCAADYHQEAMDAAAAEA
